--- a/aircraft showcase/stylesforsignup.css
+++ b/aircraft showcase/stylesforsignup.css
@@ -9,7 +9,7 @@ html {
 }
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background-color: #F4E1C6;
+  background-color: #435f8cba;
   display: flex;
   justify-content: center;
   align-items: center;
