--- a/aircraft showcase/stylesforsignup.css
+++ b/aircraft showcase/stylesforsignup.css
@@ -10,6 +10,7 @@ html {
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   background-color: #435f8cba;
+  background: #435f8cba;
   display: flex;
   justify-content: center;
   align-items: center;
